[package]
name = "scaling-rec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
math-symbols = "0.1.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rare = { git = "ssh://git@gitlab.desy.de/tomuca/rare.git", features = ["cuyt-lee-rec", "thiele-multivar"] }
rug = { version = "1.25.0", default-features = false, features = ["std", "integer", "gmp-mpfr-sys"] }
seq-macro = "0.3.5"
